<resources>
    <string name="app_name">projekti2android</string>
    <string name="email">Email</string>
    <string name="dontHaveAnyEmail">Dont have any email?</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_feedback">Add a feedback</string>
    <string name="send">Send</string>
    <string name="preview">Preview</string>
    <string name="call">call</string>
</resources>