<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="13dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/add_a_feedback"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        >
    </TextView>

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grey"
        android:gravity="start"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/dontHaveAnyEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/dontHaveAnyEmail"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:gravity="center_vertical"
            android:layout_weight="7">
        </TextView>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="@color/green"
            android:layout_weight="3">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="Or call us on here"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:layout_weight="7"
            android:gravity="center_vertical">
        </TextView>

        <Button
            android:id="@+id/btnCall"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/call"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="@color/lightblue"
            android:layout_weight="3">
        </Button>

    </LinearLayout>


    <TextView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        >
    </TextView>


    <TextView
        android:id="@+id/tvShfaqEditView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp">
    </TextView>


</LinearLayout>